@@ -2,7 +2,10 @@ include $(top_srcdir)/Makefile.decl
 
 noinst_PROGRAMS = $(TEST_PROGS)
 
-TEST_PROGS += tracker-db-manager-unattach tracker-db-manager-attach tracker-db-manager-custom
+TEST_PROGS += tracker-db-manager-unattach \
+	tracker-db-manager-attach         \
+	tracker-db-manager-custom         \
+	union-performance
 
 INCLUDES = 				\
 	-g 				\
@@ -17,6 +20,19 @@ INCLUDES = 				\
 	$(GLIB2_CFLAGS)
 
 
+union_performance_SOURCES = union-performance.c
+
+union_performance_LDADD =                                              \
+	$(top_builddir)/src/libtracker-db/libtracker-db.la              \
+	$(top_builddir)/src/libtracker-common/libtracker-common.la      \
+	$(top_builddir)/tests/common/libtracker-testcommon.la           \
+	$(top_builddir)/src/xdgmime/libxdgmime.la                       \
+	$(SQLITE3_LIBS)                                                 \
+	$(QDBM_LIBS)                                                    \
+	$(GMODULE_LIBS)                                                 \
+	$(GTHREAD_LIBS)                                                 \
+	$(GLIB2_LIBS)                                                   \
+	-lz
 
 tracker_db_manager_attach_SOURCES = 		\
 	tracker-db-manager-test-attach.c 	\
